--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "client-sdk-rust"]
-	path = client-sdk-rust
-	url = https://github.com/livekit/client-sdk-rust
+[submodule "Client-SDK-Rust"]
+	path = Client-SDK-Rust
+	url = https://github.com/Cithorum/Client-SDK-Rust
